Fix Text Overflow, Make Spacing Uniform, Fix Animations, Fix Form Alignment, Fix Horizontal Scroll

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
 
 html{
     scroll-behavior: smooth;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 body {
     display: flex;
@@ -38,6 +40,12 @@ body {
     display: flex;
     list-style: none;
 }
+@media screen and (max-width: 500px){
+    .bar .nav ul {
+        padding-left: 0;
+    }
+}
+
 .bar .nav li a{
     display: flex;
     flex-wrap: nowrap;
@@ -198,8 +206,8 @@ body {
 }
 
 @keyframes beating {
-    from {transform: scale(2);}
-    to {transform: scale(1.2);}
+    from {transform: scale(1.75);}
+    to {transform: scale(1.25);}
 }
 .box{
     display: flex;
@@ -210,7 +218,7 @@ body {
     margin-top: 13rem;
     margin-left: 15rem;
     margin-right: 15rem;
-    width: 23rem;
+    width: 27rem;
     border-radius: 2rem;
     padding: 2rem;
     background-color: black;
@@ -227,12 +235,11 @@ h1 {
     margin: auto;
     text-align: center;
     color: greenyellow;
-    letter-spacing: 0.1rem;
-    font-size: 4rem;
-    font-family: "Ubuntu";
+    font-size: 4.1rem;
+    font-family: monospace;
     white-space: nowrap;
     border-right: 0.15rem solid transparent;
-    animation: typing 3.5s steps(20,end),
+    animation: typing 3s steps(11,end),
                blinking 0.5s step-end 9;
 }
 
@@ -241,10 +248,10 @@ h1 {
         margin-top: 10rem;
         margin-left: 12rem;
         margin-right: 12rem;
-        width: 18rem;
+        width: 19rem;
     }
     h1 {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 }
 
@@ -276,14 +283,14 @@ span {
 }
 .about article{
     padding: 1rem;
-    padding-right: 8rem;
-    padding-left: 8rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
     text-align: left;
 }
 @media screen and (max-width: 900px){
     .about article{
-        padding-right: 0.7rem;
-        padding-left: 0.7rem;
+        margin-right: 1.5rem;
+        margin-left: 1.5rem;
     }
 }
 .projects article{
@@ -348,7 +355,6 @@ span {
 .contact{
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-bottom: 3rem;
 }
 @media screen and (max-width: 800px){
@@ -356,6 +362,16 @@ span {
         margin-bottom: 0;
     }
     
+}
+.contact header{
+    margin-top: 1.3rem;
+    margin-bottom: 0;
+}
+.contact form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1.5rem;
 }
 .contact input, #message{
     display: flex;
@@ -387,7 +403,9 @@ span {
     padding-left: 0.8rem;
     padding-bottom: 1.8rem;
     width: 5rem;
-    float: right;
+}
+.contact a{
+    text-decoration: none;
 }
 .contact #submit:hover{
     background-color: rgb(14, 85, 0);
@@ -395,7 +413,7 @@ span {
 }
 @media screen and (max-width: 700px){
     .contact input, #message{
-        width: 100%;
+        width: 50%;
         margin-left: 0;
     }
 }
@@ -426,9 +444,12 @@ footer{
 }
 footer .end-note {
     margin: 1rem;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
 }
 footer .end-note img{
+    padding-left: 0.15rem;
+    padding-right: 0.15rem;
+    padding-top: 0.8rem;
     animation: beating 0.9s linear infinite;
 }
 footer a img{
